force-app/main/default/objects/loan__Repayment_Transaction_Adjustment__c/loan__Repayment_Transaction_Adjustment__c.object-meta.xml
<CustomObject>
    <description>Repayment Transaction Adjustment Object</description>
    <label>Repayment Transaction Reversal</label>
    <nameField>
        <displayFormat>RTA-{0000000000}</displayFormat>
        <label>Repayment Transaction Adjustment ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Repayment Transaction Reversal</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>