force-app/main/default/objects/loan__Repayment_Transaction_Adjustment__c/fields/loan__Adjusted_Amount__c.field-meta.xml
<CustomField>
    <fullName>loan__Adjusted_Amount__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Adjusted Amount (+ve or -ve). This is not yet implemented.
Reversal Txn will reverse the master payment transaction&apos;s full amount.</description>
    <inlineHelpText>Adjusted Amount (+ve or -ve). This is not yet implemented. 
Reversal Txn will reverse the master payment transaction&apos;s full amount.</inlineHelpText>
    <label>Adjusted Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>