force-app/main/default/objects/loan__Repayment_Transaction_Adjustment__c/fields/loan__Custom_Logic__c.field-meta.xml
<CustomField>
    <fullName>loan__Custom_Logic__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Custom Funding Logic</label>
    <type>Checkbox</type>
</CustomField>