force-app/main/default/objects/loan__Repayment_Transaction_Adjustment__c/fields/loan__Interest__c.field-meta.xml
<CustomField>
    <fullName>loan__Interest__c</fullName>
    <description>Field indicates amount paid towards Interest component in related Loan Payment.</description>
    <formula>loan__Loan_Payment_Transaction__r.loan__Interest__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Field indicates amount paid towards Interest component in related Loan Payment.</inlineHelpText>
    <label>Interest</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>