force-app/main/default/objects/loan__Repayment_Transaction_Adjustment__c/fields/loan__Loan_Snapshot__c.field-meta.xml
<CustomField>
    <fullName>loan__Loan_Snapshot__c</fullName>
    <description>Captures the snapshot of loan contract at the time of repayment reversal</description>
    <label>Loan Snapshot</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>