force-app/main/default/objects/loan__Repayment_Transaction_Adjustment__c/fields/loan__Reason_Code__c.field-meta.xml
<CustomField>
    <fullName>loan__Reason_Code__c</fullName>
    <label>Reason Code</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>NSF</fullName>
            </value>
            <value>
                <fullName>Human Error</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>