force-app/main/default/objects/loan__Repayment_Transaction_Adjustment__c/fields/loan__Rejected__c.field-meta.xml
<CustomField>
    <fullName>loan__Rejected__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Rejected</label>
    <type>Checkbox</type>
</CustomField>