force-app/main/default/objects/loan__Repayment_Transaction_Adjustment__c/validationRules/loan__Check_Clear_Flag.validationRule-meta.xml
<ValidationRule>
    <fullName>loan__Check_Clear_Flag</fullName>
    <active>true</active>
    <errorConditionFormula>(loan__Loan_Payment_Transaction__r.loan__Cleared__c == false &amp;&amp; loan__Loan_Payment_Transaction__r.loan__Rejected__c == false) ||  loan__Loan_Payment_Transaction__r.loan__Rejected__c == true</errorConditionFormula>
    <errorMessage>An uncleared or rejected payment transaction cannot be reversed.</errorMessage>
</ValidationRule>