force-app/main/default/objects/loan__Repayment_Transaction_Adjustment__c/validationRules/loan__Check_Existing_Reversal_Txn.validationRule-meta.xml
<ValidationRule>
    <fullName>loan__Check_Existing_Reversal_Txn</fullName>
    <active>true</active>
    <errorConditionFormula>ISNEW() &amp;&amp;  loan__Loan_Payment_Transaction__r.loan__Cleared_Reversal_Txn_Count__c &gt; 0</errorConditionFormula>
    <errorMessage>This repayment transaction has already been reversed.</errorMessage>
</ValidationRule>