force-app/main/default/objects/loan__Repayment_Transaction_Adjustment__c/validationRules/loan__Check_for_Suspension.validationRule-meta.xml
<ValidationRule>
    <fullName>loan__Check_for_Suspension</fullName>
    <active>true</active>
    <errorConditionFormula>loan__Loan_Payment_Transaction__r.loan__Loan_Account__r.loan__Suspended__c == true</errorConditionFormula>
    <errorMessage>Unsupported operation - You cannot pass a reversal transaction on a suspended account.</errorMessage>
</ValidationRule>