force-app/main/default/objects/loan__Repayment_Transaction_Adjustment__c/validationRules/loan__Transaction_Date_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>loan__Transaction_Date_Check</fullName>
    <active>true</active>
    <errorConditionFormula>loan__Adjustment_Txn_Date__c &gt; TODAY()</errorConditionFormula>
    <errorMessage>Transaction date cannot be greater than calendar date.</errorMessage>
</ValidationRule>