force-app/main/default/objects/loan__Repayment_Transaction_Adjustment__c/validationRules/loan__Validate_Txn_Date_Against_System_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>loan__Validate_Txn_Date_Against_System_Date</fullName>
    <active>true</active>
    <errorConditionFormula>AND( $User.loan__Current_System_Date__c != null,
$User.loan__Current_System_Date__c !=  loan__Adjustment_Txn_Date__c )</errorConditionFormula>
    <errorMessage>Transaction Date must be the same as system date.</errorMessage>
</ValidationRule>